--- a/Recover_inputdata_in_U2OS_map.ipynb
+++ b/Recover_inputdata_in_U2OS_map.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ac935ffa-2dca-4178-a0b8-a111a0cf8489",
    "metadata": {},
    "source": [
     "# Pipeline for runing batch hidef community detection with input \n",
@@ -19,7 +18,6 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "e9dd321b-f0e3-45ce-afc2-e2efc8cee56f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +25,8 @@
     "import numpy as np\n",
     "import pickle\n",
     "import sys\n",
-    "sys.path.append('/cellar/users/mhu/MuSIC')\n",
-    "from music_utils import *\n",
+    "from cellmaps_utils.music_utils import *\n",
+    "\n",
     "from tqdm import tqdm\n",
     "import os\n",
     "from statsmodels.stats.multitest import multipletests\n",
@@ -38,7 +36,6 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "bb38b32c-328a-445a-8704-927dedd34b64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +113,6 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "996982c7-fcf4-422b-a61c-c7dba98de58c",
    "metadata": {
     "tags": []
    },
@@ -131,7 +127,6 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "0b94287f-b578-4623-b27b-a261575313d8",
    "metadata": {
     "tags": []
    },
@@ -147,7 +142,6 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "776c9a0d-c17a-44a1-a0d6-2df16b499b31",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +178,6 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "2c1cb0be-13fa-42a2-a92f-c910d52a819c",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -216,7 +209,6 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "69403373-7060-4c69-ada8-20236a19459f",
    "metadata": {
     "tags": []
    },
@@ -506,7 +498,6 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "9f4cab8e-7070-48a2-9ca1-167790d822bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +530,6 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "160ea9ba-dbc8-4b89-aca9-2d1a302bdb9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +539,6 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "7c4b4ced-ce63-4a75-a00c-a86def4bf876",
    "metadata": {},
    "outputs": [
     {
@@ -567,14 +556,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3fc9a6a-c5dc-4cf6-9d92-ac3a932bc16e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "03f8bde4-c360-48ee-9a31-277f7dbca69d",
    "metadata": {},
    "source": [
     "### Node2Vec embedding hierarchies "
@@ -583,7 +570,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "581b50bf-e277-42ba-b8d9-efbd281b063a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +583,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7ad21104-fa74-4d4d-9ede-0b973967af32",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -975,12 +960,10 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0aff08a7-8340-43e0-9ce1-8c355a5523cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append('/cellar/users/mhu/MuSIC/U2OS/hidef/Evaluate_Hierarchy')\n",
-    "from hidef_input_cutoff_utils import *\n",
+    "from cellmaps_hierarchyeval.hidef_input_cutoff_utils import *\n",
     "savedir = '/cellar/users/mhu/MuSIC/U2OS/hidef/Evaluate_Hierarchy/reference_file/Input'\n",
     "prefix = 'N2V_dim_1024_p_2_q_1.gname_converted'\n",
     "\n",
@@ -1000,7 +983,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "aabd69b1-d634-4725-bbf6-a66d8e964b0e",
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1026,6 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "ba7acb75-44c7-41ee-9a08-f2c6ff9178e2",
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1097,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d515a745-b227-4425-a06e-1314f95a2ca9",
    "metadata": {},
    "source": [
     "### DenseNet embedding hierarchies "
@@ -1125,7 +1105,6 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "ca6edb50-a442-40c1-bbba-212a1f20cd5b",
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1128,6 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "b71ffa07-825d-4626-9bb1-13b2bd0555e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1151,6 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "590bdd49-c034-4117-8407-47a12337149b",
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1194,6 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "8706c222-70c8-42d2-a018-37b285a43b27",
    "metadata": {},
    "outputs": [
     {
@@ -1289,7 +1265,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "347aa81b-c81c-4705-96ab-0e7a09e5b24b",
    "metadata": {},
    "source": [
     "# BioPlex Hierarchy "
@@ -1298,7 +1273,6 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "83f6de8a-c4d4-4f60-8334-40681b0fa60b",
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1320,6 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "1fedacbc-541f-41f0-868a-494b5c52d117",
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1343,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d21e491-9b4c-4116-88cd-ee98a3395f6d",
    "metadata": {},
    "source": [
     "### Parameters for run enrichr"
@@ -1379,7 +1351,6 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "b38f191a-c12d-4059-b527-ad73c44f3bb5",
    "metadata": {
     "tags": []
    },
@@ -1443,7 +1414,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e894816e-df00-457f-a19b-1646ab40d676",
    "metadata": {},
    "source": [
     "#### Test run\n",
@@ -1453,7 +1423,6 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "b433c489-2107-4bb3-a378-48caf2b97735",
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1552,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69ceffc0-3563-4e59-a547-73a37d9dfff8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1591,9 +1559,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hidef",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "hidef"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1605,7 +1573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
